# GAMETEMPLATE_SDL2C

./: .gitignore  CMakeLists.txt  LICENSE  makefile
cmake/: AddResources.cmake
game/: CMakeLists.txt
game/src/: game.c
game/src/components/gameobject/: animation.c
game/src/core/: draw.c
game/src/scenes/: initTitleScreen.c
headers/: defs.h  initTitleScreen.h  struct.h
include/: input.h  sprite.h
src/: animation.h  collision.c  collision.h  common.h  defs.h  draw.c  draw.h  game.c  init.c  init.h  initSplashScreen.c  initSplashScreen.h  initTitleScreen.c  initTitleScreen.h  input.c  input.h  main.c  sprite.c  sprite.h  spriteClip.c  spriteClip.h  struct.h  utils.h
src/components/gameobject/: collision.c  spriteClip.c
src/core/: init.c  input.c  utils.c
src/scenes/: initSplashScreen.c  initTitleScreen.c
